--- a/index.html
+++ b/index.html
@@ -25,42 +25,45 @@
     </div>
 
     <!-- Filtros -->
-    <div class="flex items-center space-x-3 mb-6">
+    <div class="flex flex-wrap items-center space-x-3 mb-4">
       <span class="text-gray-700 font-semibold">Filtrar:</span>
       <button id="filtroTodos" class="bg-gray-200 hover:bg-gray-300 px-3 py-1 rounded">Todos</button>
       <button id="filtroPresentes" class="bg-green-200 hover:bg-green-300 px-3 py-1 rounded">Presentes</button>
       <button id="filtroSaida" class="bg-red-200 hover:bg-red-300 px-3 py-1 rounded">Saíram</button>
+
+      <div class="relative ml-auto w-full sm:w-64 mt-3 sm:mt-0">
+        <input id="buscaInput" type="text" placeholder="Buscar..." class="pl-10 pr-4 py-2 w-full border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <i data-feather="search" class="absolute left-3 top-2.5 text-gray-400"></i>
+      </div>
     </div>
 
     <div class="bg-white rounded-xl shadow-md overflow-hidden mb-8">
-      <div class="p-6">
-        <div class="overflow-x-auto">
-          <table class="min-w-full divide-y divide-gray-200" id="tabelaRegistros">
-            <thead class="bg-gray-50">
-              <tr>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Visitante</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Documento</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Placa</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Destino</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Motivo</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Entrada</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Saída</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Ações</th>
-              </tr>
-            </thead>
-            <tbody id="listaRegistros" class="bg-white divide-y divide-gray-200"></tbody>
-          </table>
-        </div>
+      <div class="p-6 overflow-x-auto">
+        <table class="min-w-full divide-y divide-gray-200" id="tabelaRegistros">
+          <thead class="bg-gray-50">
+            <tr>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Visitante</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Documento</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Placa</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Destino</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Motivo</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Entrada</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Saída</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Ações</th>
+            </tr>
+          </thead>
+          <tbody id="listaRegistros" class="bg-white divide-y divide-gray-200"></tbody>
+        </table>
       </div>
     </div>
   </main>
 
-  <!-- Modal de novo registro -->
+  <!-- Modal -->
   <div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
     <div class="bg-white p-6 rounded-xl shadow-xl w-96">
       <h2 class="text-xl font-semibold mb-4">Novo Registro</h2>
       <input id="visitante" type="text" placeholder="Nome do visitante" class="w-full border p-2 rounded mb-3">
-      <input id="documento" type="text" placeholder="Documento (CPF ou RG)" class="w-full border p-2 rounded mb-3">
+      <input id="documento" type="text" placeholder="Documento (CPF/RG)" class="w-full border p-2 rounded mb-3">
       <input id="placa" type="text" placeholder="Placa do veículo (ex: ABC1D23)" class="w-full border p-2 rounded mb-3">
       <input id="destino" type="text" placeholder="Destino (Ex: Apto 101)" class="w-full border p-2 rounded mb-3">
       <input id="motivo" type="text" placeholder="Motivo da vinda" class="w-full border p-2 rounded mb-3">
@@ -81,7 +84,7 @@
           getFirestore, collection, addDoc, deleteDoc, updateDoc, doc, onSnapshot, serverTimestamp
         } = await import('https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js');
 
-        // ====== CONFIGURE AQUI ======
+        // 🔧 CONFIGURE AQUI SEU FIREBASE
         const firebaseConfig = {
           apiKey: "AIzaSyCmZBxRVcmTPJFLdWWcNd07LZPJYZnR5N0",
           authDomain: "portaria-e22ae.firebaseapp.com",
@@ -91,7 +94,6 @@
           appId: "1:663485115589:web:4b2f860ede7f0f7b5854ac",
           measurementId: "G-QEGQN6CTBB"
         };
-        // ============================
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
@@ -106,166 +108,125 @@
         const filtroTodos = document.getElementById("filtroTodos");
         const filtroPresentes = document.getElementById("filtroPresentes");
         const filtroSaida = document.getElementById("filtroSaida");
+        const buscaInput = document.getElementById("buscaInput");
 
         let filtroAtual = "todos";
-        let docsCache = []; // <-- cache local dos dados
+        let termoBusca = "";
+        let docsCache = [];
 
-        // Render inicial de icons
-        try { feather.replace(); } catch(e) {}
+        // icons
+        feather.replace();
 
-        // abrir/fechar modal
+        // modal controle
         btnNovo.addEventListener("click", () => {
           modal.classList.remove("hidden");
-          const v = document.getElementById('visitante');
-          if (v) v.focus();
+          document.getElementById('visitante').focus();
         });
         btnCancelar.addEventListener("click", () => modal.classList.add("hidden"));
 
-        const getVal = id => (document.getElementById(id) ? document.getElementById(id).value.trim() : "");
-
-        // salvar
+        // salvar novo registro
         btnSalvar.addEventListener("click", async () => {
-          try {
-            const visitante = getVal("visitante");
-            const documento = getVal("documento");
-            const placa = getVal("placa");
-            const destino = getVal("destino");
-            const motivo = getVal("motivo");
-
-            if (!visitante || !documento || !destino || !motivo) {
-              alert("Preencha os campos obrigatórios: visitante, documento, destino e motivo.");
-              return;
-            }
-
-            await addDoc(collection(db, "registros"), {
-              visitante,
-              documento,
-              placa: placa || "-",
-              destino,
-              motivo,
-              entrada: new Date().toLocaleString(),
-              saida: "-",
-              timestamp: serverTimestamp()
-            });
-
-            ["visitante","documento","placa","destino","motivo"].forEach(id => {
-              const el = document.getElementById(id); if (el) el.value = "";
-            });
-            modal.classList.add("hidden");
-          } catch (err) {
-            console.error("Erro salvar:", err); alert("Erro ao salvar (veja console).");
-          }
+          const v = val("visitante"), d = val("documento"), p = val("placa"), des = val("destino"), m = val("motivo");
+          if (!v || !d || !des || !m) { alert("Preencha visitante, documento, destino e motivo."); return; }
+          await addDoc(collection(db, "registros"), {
+            visitante: v, documento: d, placa: p || "-", destino: des, motivo: m,
+            entrada: new Date().toLocaleString(), saida: "-", timestamp: serverTimestamp()
+          });
+          ["visitante","documento","placa","destino","motivo"].forEach(id=>document.getElementById(id).value="");
+          modal.classList.add("hidden");
         });
 
-        // renderiza tabela com base em registros passados
-        function renderizar(registros) {
-          tabela.innerHTML = "";
-          let filtrados = registros;
-          if (filtroAtual === "presentes") filtrados = registros.filter(r => !r.saida || r.saida === "-");
-          if (filtroAtual === "saida") filtrados = registros.filter(r => r.saida && r.saida !== "-");
+        const val = id => document.getElementById(id).value.trim();
 
-          // se nenhum registro
-          if (filtrados.length === 0) {
-            tabela.innerHTML = `<tr><td class="px-6 py-8 text-center text-gray-500" colspan="8">Nenhum registro encontrado.</td></tr>`;
+        // filtros e busca
+        [filtroTodos,filtroPresentes,filtroSaida].forEach(btn=>btn.addEventListener("click",()=>{
+          filtroAtual = btn.id.replace("filtro","");
+          atualizarVisualFiltro();
+          renderizar(docsCache);
+        }));
+
+        buscaInput.addEventListener("input",()=>{
+          termoBusca = buscaInput.value.toLowerCase();
+          renderizar(docsCache);
+        });
+
+        function atualizarVisualFiltro(){
+          [filtroTodos,filtroPresentes,filtroSaida].forEach(b=>b.classList.remove("filter-active"));
+          if(filtroAtual==="Todos")filtroTodos.classList.add("filter-active");
+          if(filtroAtual==="Presentes")filtroPresentes.classList.add("filter-active");
+          if(filtroAtual==="Saida")filtroSaida.classList.add("filter-active");
+        }
+        atualizarVisualFiltro();
+
+        function escapeHtml(str){return str?String(str).replace(/[&<>"']/g,m=>({"&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#039;"}[m])):"";}
+
+        function renderizar(registros){
+          tabela.innerHTML="";
+          let filtrados=registros;
+          // filtro por status
+          if(filtroAtual==="Presentes") filtrados=filtrados.filter(r=>!r.saida||r.saida==="-");
+          if(filtroAtual==="Saida") filtrados=filtrados.filter(r=>r.saida&&r.saida!=="-");
+          // busca
+          if(termoBusca){
+            filtrados=filtrados.filter(r=>
+              [r.visitante,r.documento,r.destino,r.placa,r.motivo]
+              .some(campo=>campo&&campo.toLowerCase().includes(termoBusca))
+            );
+          }
+
+          if(filtrados.length===0){
+            tabela.innerHTML='<tr><td colspan="8" class="text-center py-8 text-gray-500">Nenhum registro encontrado.</td></tr>';
             return;
           }
 
-          filtrados.forEach(dados => {
-            const temSaida = dados.saida && dados.saida !== "-";
-            const tr = document.createElement("tr");
-            tr.innerHTML = `
-              <td class="px-6 py-4 text-sm text-gray-900">${escapeHtml(dados.visitante)}</td>
+          filtrados.forEach(dados=>{
+            const temSaida=dados.saida&&dados.saida!=="-";
+            const tr=document.createElement("tr");
+            tr.innerHTML=`
+              <td class="px-6 py-4 text-sm">${escapeHtml(dados.visitante)}</td>
               <td class="px-6 py-4 text-sm text-gray-500">${escapeHtml(dados.documento)}</td>
-              <td class="px-6 py-4 text-sm text-gray-500">${escapeHtml(dados.placa || "-")}</td>
+              <td class="px-6 py-4 text-sm text-gray-500">${escapeHtml(dados.placa||"-")}</td>
               <td class="px-6 py-4 text-sm text-gray-500">${escapeHtml(dados.destino)}</td>
-              <td class="px-6 py-4 text-sm text-gray-500">${escapeHtml(dados.motivo || "-")}</td>
+              <td class="px-6 py-4 text-sm text-gray-500">${escapeHtml(dados.motivo||"-")}</td>
               <td class="px-6 py-4 text-sm text-gray-500">${escapeHtml(dados.entrada)}</td>
               <td class="px-6 py-4 text-sm text-gray-500">${escapeHtml(dados.saida)}</td>
               <td class="px-6 py-4 text-sm">
                 ${!temSaida
-                  ? `<button class="text-green-600 hover:text-green-900 mr-3" data-saida="${dados.id}" title="Registrar saída"><i data-feather="log-out"></i></button>
-                     <button class="text-red-600 hover:text-red-900" data-del="${dados.id}" title="Excluir registro"><i data-feather="trash-2"></i></button>`
-                  : `<span class="text-gray-400 italic">Concluído</span>`
-                }
-              </td>
-            `;
+                  ? `<button class="text-green-600 hover:text-green-900 mr-3" data-saida="${dados.id}"><i data-feather="log-out"></i></button>
+                     <button class="text-red-600 hover:text-red-900" data-del="${dados.id}"><i data-feather="trash-2"></i></button>`
+                  : `<span class="text-gray-400 italic">Concluído</span>`}
+              </td>`;
             tabela.appendChild(tr);
           });
 
           feather.replace();
 
-          // listeners dos botões inseridos
-          document.querySelectorAll("[data-saida]").forEach(btn => {
-            btn.addEventListener("click", async () => {
-              const id = btn.dataset.saida;
-              if (!id) return;
-              if (!confirm("Registrar saída deste visitante?")) return;
-              try {
-                await updateDoc(doc(db, "registros", id), { saida: new Date().toLocaleString() });
-                // onSnapshot atualizará docsCache e re-renderizará
-              } catch (err) { console.error("Erro saída:", err); alert("Erro ao registrar saída."); }
+          document.querySelectorAll("[data-saida]").forEach(btn=>{
+            btn.addEventListener("click",async()=>{
+              const id=btn.dataset.saida;
+              if(!confirm("Registrar saída deste visitante?"))return;
+              await updateDoc(doc(db,"registros",id),{saida:new Date().toLocaleString()});
             });
           });
 
-          document.querySelectorAll("[data-del]").forEach(btn => {
-            btn.addEventListener("click", async () => {
-              const id = btn.dataset.del;
-              if (!id) return;
-              if (!confirm("Deseja excluir este registro?")) return;
-              try {
-                await deleteDoc(doc(db, "registros", id));
-              } catch (err) { console.error("Erro deletar:", err); alert("Erro ao excluir registro."); }
+          document.querySelectorAll("[data-del]").forEach(btn=>{
+            btn.addEventListener("click",async()=>{
+              const id=btn.dataset.del;
+              if(!confirm("Excluir este registro?"))return;
+              await deleteDoc(doc(db,"registros",id));
             });
           });
         }
 
-        function escapeHtml(str) {
-          if (str === null || str === undefined) return "";
-          return String(str).replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;")
-                            .replace(/"/g,"&quot;").replace(/'/g,"&#039;");
-        }
-
-        // filtros: alteram filtroAtual, atualizam visual e re-renderizam imediatamente usando docsCache
-        function setFilter(f) {
-          filtroAtual = f;
-          atualizarVisualFiltro();
+        onSnapshot(collection(db,"registros"),snap=>{
+          docsCache=snap.docs.map(d=>({id:d.id,...d.data()}))
+            .sort((a,b)=>(b.timestamp?.seconds||0)-(a.timestamp?.seconds||0));
           renderizar(docsCache);
-        }
-        filtroTodos.addEventListener("click", () => setFilter("todos"));
-        filtroPresentes.addEventListener("click", () => setFilter("presentes"));
-        filtroSaida.addEventListener("click", () => setFilter("saida"));
-
-        function atualizarVisualFiltro() {
-          [filtroTodos, filtroPresentes, filtroSaida].forEach(btn => btn.classList.remove("filter-active"));
-          if (filtroAtual === "todos") filtroTodos.classList.add("filter-active");
-          if (filtroAtual === "presentes") filtroPresentes.classList.add("filter-active");
-          if (filtroAtual === "saida") filtroSaida.classList.add("filter-active");
-        }
-        atualizarVisualFiltro();
-
-        // onSnapshot atualiza docsCache e re-renderiza com o filtro atual
-        const colRef = collection(db, "registros");
-        onSnapshot(colRef, (snapshot) => {
-          docsCache = snapshot.docs.map(d => ({ id: d.id, ...d.data() }));
-          // opcional: ordenar por timestamp (mais recente primeiro)
-          docsCache.sort((a,b) => {
-            const ta = a.timestamp ? (a.timestamp.seconds || 0) : 0;
-            const tb = b.timestamp ? (b.timestamp.seconds || 0) : 0;
-            return tb - ta;
-          });
-          renderizar(docsCache);
-        }, err => {
-          console.error("onSnapshot erro:", err);
         });
-
-      } catch (err) {
-        console.error("Erro inicialização:", err);
-        alert("Erro ao carregar app. Veja o console (F12).");
-      }
+      } catch(e){console.error(e);alert("Erro ao iniciar app. Veja console.");}
     });
   </script>
 
-  <!-- fallback feather init -->
-  <script> try { feather.replace(); } catch(e){} </script>
+  <script>feather.replace();</script>
 </body>
 </html>
