--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="bg-gray-50">
   <nav class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-gray-800">GateGuard</h1>
+    <h1 class="text-2xl font-bold text-gray-800">ROSSETTI</h1>
   </nav>
 
   <main class="p-8 max-w-7xl mx-auto">
