--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ROSSETTI - Controle de Portaria</title>
+  <title>GateGuard - Controle de Portaria</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
     #modal { z-index: 60; }
     .filter-active { box-shadow: 0 0 0 3px rgba(59,130,246,0.25); }
+    th.sortable:hover { cursor: pointer; background-color: #f1f5f9; }
   </style>
 </head>
 <body class="bg-gray-50">
   <nav class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-gray-800">ROSSETTI</h1>
+    <h1 class="text-2xl font-bold text-gray-800">GateGuard</h1>
   </nav>
 
   <main class="p-8 max-w-7xl mx-auto">
@@ -42,13 +43,13 @@
         <table class="min-w-full divide-y divide-gray-200" id="tabelaRegistros">
           <thead class="bg-gray-50">
             <tr>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Visitante</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Documento</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Placa</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Destino</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Motivo</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Entrada</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Saída</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase sortable" data-sort="visitante">Visitante</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase sortable" data-sort="documento">Documento</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase sortable" data-sort="placa">Placa</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase sortable" data-sort="destino">Destino</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase sortable" data-sort="motivo">Motivo</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase sortable" data-sort="entrada">Entrada</th>
+              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase sortable" data-sort="saida">Saída</th>
               <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Ações</th>
             </tr>
           </thead>
@@ -84,7 +85,6 @@
           getFirestore, collection, addDoc, deleteDoc, updateDoc, doc, onSnapshot, serverTimestamp
         } = await import('https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js');
 
-        // 🔧 CONFIGURE AQUI SEU FIREBASE
         const firebaseConfig = {
           apiKey: "AIzaSyCmZBxRVcmTPJFLdWWcNd07LZPJYZnR5N0",
           authDomain: "portaria-e22ae.firebaseapp.com",
@@ -98,7 +98,6 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        // elementos
         const tabela = document.getElementById("listaRegistros");
         const modal = document.getElementById("modal");
         const btnNovo = document.getElementById("novoRegistroBtn");
@@ -109,22 +108,22 @@
         const filtroPresentes = document.getElementById("filtroPresentes");
         const filtroSaida = document.getElementById("filtroSaida");
         const buscaInput = document.getElementById("buscaInput");
+        const cabecalhos = document.querySelectorAll("th.sortable");
 
         let filtroAtual = "todos";
         let termoBusca = "";
         let docsCache = [];
+        let sortCampo = "entrada";
+        let sortAsc = false;
 
-        // icons
         feather.replace();
 
-        // modal controle
         btnNovo.addEventListener("click", () => {
           modal.classList.remove("hidden");
           document.getElementById('visitante').focus();
         });
         btnCancelar.addEventListener("click", () => modal.classList.add("hidden"));
 
-        // salvar novo registro
         btnSalvar.addEventListener("click", async () => {
           const v = val("visitante"), d = val("documento"), p = val("placa"), des = val("destino"), m = val("motivo");
           if (!v || !d || !des || !m) { alert("Preencha visitante, documento, destino e motivo."); return; }
@@ -138,7 +137,6 @@
 
         const val = id => document.getElementById(id).value.trim();
 
-        // filtros e busca
         [filtroTodos,filtroPresentes,filtroSaida].forEach(btn=>btn.addEventListener("click",()=>{
           filtroAtual = btn.id.replace("filtro","");
           atualizarVisualFiltro();
@@ -148,6 +146,15 @@
         buscaInput.addEventListener("input",()=>{
           termoBusca = buscaInput.value.toLowerCase();
           renderizar(docsCache);
+        });
+
+        cabecalhos.forEach(th=>{
+          th.addEventListener("click",()=>{
+            const campo=th.dataset.sort;
+            if(sortCampo===campo) sortAsc=!sortAsc; else sortAsc=true;
+            sortCampo=campo;
+            renderizar(docsCache);
+          });
         });
 
         function atualizarVisualFiltro(){
@@ -163,16 +170,20 @@
         function renderizar(registros){
           tabela.innerHTML="";
           let filtrados=registros;
-          // filtro por status
           if(filtroAtual==="Presentes") filtrados=filtrados.filter(r=>!r.saida||r.saida==="-");
           if(filtroAtual==="Saida") filtrados=filtrados.filter(r=>r.saida&&r.saida!=="-");
-          // busca
           if(termoBusca){
             filtrados=filtrados.filter(r=>
               [r.visitante,r.documento,r.destino,r.placa,r.motivo]
               .some(campo=>campo&&campo.toLowerCase().includes(termoBusca))
             );
           }
+
+          filtrados.sort((a,b)=>{
+            const A=(a[sortCampo]||"").toLowerCase();
+            const B=(b[sortCampo]||"").toLowerCase();
+            return sortAsc?A.localeCompare(B):B.localeCompare(A);
+          });
 
           if(filtrados.length===0){
             tabela.innerHTML='<tr><td colspan="8" class="text-center py-8 text-gray-500">Nenhum registro encontrado.</td></tr>';
