--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GateGuard - Controle de Portaria</title>
+  <title>ROSSETTI - Controle de Portaria</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
@@ -14,7 +14,7 @@
 </head>
 <body class="bg-gray-50">
   <nav class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-gray-800">GateGuard</h1>
+    <h1 class="text-2xl font-bold text-gray-800">ROSSETTI</h1>
   </nav>
 
   <main class="p-8 max-w-7xl mx-auto">
